--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,3 @@
-/config.php
-admin/config.php
-
-!index.html
-
-/image/
-
-system/storage/
-#system/library/session.php
-
-# vQmod log files
-vqmod/logs/*
-# vQmod cache files
-vqmod/vqcache/*
-vqmod/checked.cache
-vqmod/mods.cache
-
+/templates_c/*
 .idea/
-.buildpath
-.project
-.settings/
-nbproject/
-
 .DS_Store
-.ds_store
-/vendor/
-
-# Elastic Beanstalk Files
-#.elasticbeanstalk/*
-#!.elasticbeanstalk/*.cfg.yml
-#!.elasticbeanstalk/*.global.yml
